# jyd_tdl_app

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  MMF.md  README.md  env.sh  package_runtime.sh
apps/: camera_demo_support.cpp  camera_demo_support.hpp  demo_support.cpp  demo_support.hpp  image_demo_support.hpp  tdl_audio_aio_demo.cpp  tdl_camera_capture_demo.cpp  tdl_camera_classify_demo.cpp  tdl_camera_detect_demo.cpp  tdl_camera_feature_demo.cpp  tdl_camera_rtsp_demo.cpp  tdl_classify_demo.cpp  tdl_detect_demo.cpp  tdl_face_attr_pipeline_demo.cpp  tdl_face_attribute_demo.cpp  tdl_face_detect_demo.cpp  tdl_feature_demo.cpp  tdl_graphic_vo_demo.cpp  tdl_instance_seg_demo.cpp  tdl_keypoint_demo.cpp  tdl_lane_demo.cpp  tdl_media_smoke_demo.cpp  tdl_multi_vpss_demo.cpp  tdl_osd_demo.cpp  tdl_plate_recognize_demo.cpp  tdl_semantic_seg_demo.cpp  tdl_vad_demo.cpp  tdl_vdec_demo.cpp  tdl_yolov5_demo.cpp  tdl_yolov8_demo.cpp
build_user/cv184x/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt  tdl_camera_capture_demo  tdl_camera_rtsp_demo
cmake/: cv184x_tdl.cmake
cmake/toolchains/: arm-none-linux-musleabihf.cmake
configs/: sensor_cfg_cv2003_switch_high_addr54_mclk1.ini  sensor_cfg_cv2003_switch_master_addr53_mclk1.ini
configs/model_specs/: README.md  cls_hand_gesture.ini  template_classifier.ini  template_face_attribute.ini  template_feature.ini  template_instance_segmentation.ini  template_keypoint_hand.ini  template_lane_detection.ini  template_plate_recognizer.ini  template_scrfd.ini  template_semantic_segmentation.ini  template_vad_fsmn.ini
docs/: ALGORITHMS.md  ALG_INFO.md  ARCHITECTURE.md  BINDINGS.md  DEV_GUIDE.md  DEV_GUIDE_CN.md  DUAL_CORE.md  MMF.md  README.md  board_native_build_guide_zh.md
include/tdl_app/: advanced.hpp  algorithm_engine.hpp  audio_decoder.hpp  audio_encoder.hpp  audio_input.hpp  audio_output.hpp  audio_system.hpp  audio_types.hpp  camera.hpp  classifier.hpp  detector.hpp  face_attribute_classifier.hpp  face_detector.hpp  feature_extractor.hpp  frame_reader.hpp  graphic_vo_layer.hpp  instance_segmenter.hpp  keypoint_detector.hpp  lane_detector.hpp  media_ipc_client.hpp  media_ipc_protocol.hpp  media_ipc_server.hpp  media_system.hpp  media_types.hpp  mipi_device.hpp  mmf.hpp  multi_stage_pipeline.hpp  nn_base.hpp  nn_classifier.hpp  nn_face_attribute.hpp  nn_feature.hpp  nn_plate_recognizer.hpp  nn_scrfd.hpp  nn_yolov8.hpp  pipeline.hpp  plate_recognizer.hpp  rtsp_streamer.hpp  semantic_segmenter.hpp  sensor_media.hpp  sys_context.hpp  (+9 more)
install_user/cv184x/configs/: sensor_cfg_0x44003340.ini  sensor_cfg_0x44003340_addr54_mclk1.ini
install_user/cv184x/configs/model_specs/: README.md  yolov5s_det_coco80.ini  yolov8n_det_coco80.ini  yolov8n_det_roads.ini
install_user/cv184x/include/tdl_app/: advanced.hpp  algorithm_model.hpp  frame_sink.hpp  frame_source.hpp  media_link.hpp  media_system.hpp  mmf.hpp  model_descriptor.hpp  nn_yolov5.hpp  osd_region.hpp  region_overlay.hpp  simple_pipeline.hpp  tdl_app.hpp
package_user/tdl_app_sdk_cv184x/: env.sh  run_camera_capture_demo.sh  run_camera_classify_demo.sh  run_camera_detect_demo.sh  run_camera_feature_demo.sh  run_camera_rtsp_demo.sh  run_classify_demo.sh  run_detect_demo.sh  run_feature_demo.sh  run_media_smoke_demo.sh  run_multi_vpss_demo.sh  run_osd_demo.sh  run_vdec_demo.sh  run_yolov5_demo.sh  run_yolov8_demo.sh
package_user/tdl_app_sdk_cv184x/configs/: sensor_cfg_0x44003300_addr53_mclk1.ini  sensor_cfg_cv2003.ini  sensor_cfg_cv2003_switch_high_addr54_mclk1_lane21.ini
package_user/tdl_app_sdk_cv184x/configs/model_specs/: feature_cviface.ini  roads_yolov5s.ini
package_user/tdl_app_sdk_cv184x/models/cv184x/: yolov8n_det_person_vehicle_384_640_INT8_cv184x.bmodel
scripts/: build_cv184x.sh  clean_tree.sh  collect_cv184x_deps.sh  package_runtime.sh  run_with_board_env.sh  setup_board_native_env.sh
src/: multi_stage_pipeline.cpp  pipeline.cpp  simple_pipeline.cpp
src/algorithm/: algorithm_engine.cpp  classifier.cpp  detector.cpp  face_attribute_classifier.cpp  face_detector.cpp  feature_extractor.cpp  instance_segmenter.cpp  keypoint_detector.cpp  lane_detector.cpp  model_descriptor.cpp  nn_base.cpp  nn_classifier.cpp  nn_face_attribute.cpp  nn_feature.cpp  nn_plate_recognizer.cpp  nn_scrfd.cpp  nn_yolov5.cpp  nn_yolov8.cpp  plate_recognizer.cpp  semantic_segmenter.cpp  voice_activity_detector.cpp
src/algorithm/private/: bmrt_utils.hpp  tdl_sdk_utils.hpp
src/compat/linux/: fb.h
src/media/: audio_decoder.cpp  audio_encoder.cpp  audio_input.cpp  audio_output.cpp  audio_system.cpp  camera.cpp  frame_reader.cpp  frame_sink.cpp  frame_source.cpp  graphic_vo_layer.cpp  media_ipc_client.cpp  media_ipc_server.cpp  media_link.cpp  media_system.cpp  mipi_device.cpp  mmf.cpp  osd_region.cpp  region_overlay.cpp  rtsp_streamer.cpp  sensor_media.cpp  sys_context.cpp  vdec_channel.cpp  venc_channel.cpp  vi_channel.cpp  video_buffer.cpp  vo_output.cpp  vpss_group.cpp
src/media/private/: audio_runtime.cpp  audio_runtime.hpp  audio_vendor_utils.hpp  media_common.hpp  sensor_media_impl.cpp  sensor_media_impl.hpp  sensor_media_vi_isp.cpp  sensor_media_vpss.cpp
src/private/: pipeline_bootstrap.hpp
